#399: explicitly instantiate a FhirContext for every FhirProducer #400: HTTP AuditMessageQueue based on Spring RestTemplate for ipf-atna-spring-boot-starter